src/objects/agf__ADM_Released_In__c.object
<CustomObject>
    <description>Object to define the releases that a fix was deployed to.  Each Work record has a one to many relationship with releases.</description>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Release_Name__c</fullName>
        <description>Used as a temporary storage for a look up against a map of release names to Ids</description>
        <label>Release Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Release__c</fullName>
        <label>Release</label>
        <referenceTo>agf__ADM_Release__c</referenceTo>
        <relationshipName>Release</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>agf__Reverted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Scheduled_Release_Date__c</fullName>
        <formula>agf__Release__r.agf__Release_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Stamped_On__c</fullName>
        <description>Date/time that the release stamp was stamped.</description>
        <label>Stamped On</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work ID</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipName>WorkReleasedIn</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Released In</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>agf__Release_Name__c</columns>
        <columns>agf__Work__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Released In #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Released In</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>